--- a/src/main/resources/templates/fragments/usuario/usuarioformedit.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioformedit.html
@@ -129,16 +129,11 @@
         </div>
 </body>
 <script th:inline="javascript">
-    var SwalColors = {
-  red: "rgba(0,0,0,250)",
-  green: "rgba(50, 250, 50, 0.45)",
-  blue: "rgba(0, 0, 255, 0.45)"
-};
 
-function SwalOverlayColor(color){
+function SwalOverlayColor(){
   setTimeout(function(){
-    $(".swal-overlay").css({"background-color":SwalColors[color]});
-  },200);
+    $(".swal-overlay").css({"background-image": 'url(/sisadmrh/image/background.jpg)'});
+  },1);
 }
 
     Textheader('pnt_geus', document.title);
@@ -161,7 +156,7 @@ function SwalOverlayColor(color){
                 $("form#usuarioform").submit();
             }
             else{
-            SwalOverlayColor("red");    
+            SwalOverlayColor();    
             swal({
                 title: "ERROR!",
                 text: "la contraseña debe tener al menos 8 caracteres",
