--- a/src/main/resources/templates/fragments/empleado/empleadoshowcons.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoshowcons.html
@@ -96,21 +96,21 @@
                                 <p class="form-control-static" th:text="${empleado.emailempleado}">Fecha de Nacimiento</p>
                             </div>
                         </div>
-                         <div class="form-group">
+<!--                         <div class="form-group">
                             <label class="col-sm-5 control-label">Departamento de Residencia del Empleado:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${empleado.departamentorecidencia}">Fecha de Nacimiento</p>
                             </div>
-                        </div>
+                        </div>-->
                          
                     </div> 
                     <div class="col-md-6">
-                        <div class="form-group">
+<!--                        <div class="form-group">
                             <label class="col-sm-7 control-label">Municipio de Residencia del Empleado:</label>
                             <div class="col-sm-5">
                                 <p class="form-control-static" th:text="${empleado.municipioresidencia}">Fecha de Nacimiento</p>
                             </div>
-                        </div>
+                        </div>-->
                         <div class="form-group">
                             <label class="col-sm-7 control-label">DUI del Empleado:</label>
                             <div class="col-sm-5">
@@ -583,7 +583,7 @@
                                                                 <thead>
                                                                     <tr>
                                                                         <th>Codigo</th>
-                                                                        <th>Nombre</th>
+                                                                        <th>Nombre de Idioma</th>
                                                                         <th>Escribe</th>
                                                                         <th>Habla</th>
                                                                         <th>Traduce</th>
