--- a/src/main/resources/templates/fragments/hijodiscapacidad/hijodiscapacidadshow.html
+++ b/src/main/resources/templates/fragments/hijodiscapacidad/hijodiscapacidadshow.html
@@ -85,19 +85,19 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                                 <p class="form-control-static" th:text="${hijodiscapacidad.codigohijodiscapacidad}">codigo de Empleado</p></div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Nombre de Contacto:</label>
+                            <label class="col-sm-5 control-label">Nombre del Hijo con discapacidad:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${hijodiscapacidad.nombrehijodiscapacidad}">Nombre de Empleado</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Apellido de Contacto:</label>
+                            <label class="col-sm-5 control-label">Apellido del Hijo con discapacidad:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${hijodiscapacidad.apellidohijodiscapacidad}">Apellido de Empleado</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Nombre Discapacidad:</label>
+                            <label class="col-sm-5 control-label">Nombre de Discapacidad:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${hijodiscapacidad.nombrediscapacidad}">Fecha de Nacimiento</p>
                             </div>
@@ -105,13 +105,13 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div> 
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="col-sm-7 control-label">Tipo Discapacidad:</label>
+                            <label class="col-sm-7 control-label">Tipo de Discapacidad:</label>
                             <div class="col-sm-5">
                                 <p class="form-control-static" th:text="${hijodiscapacidad.tipodiscapacidad}">Telefono Movil de Empleado</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-7 control-label">Fecha de Nacimiento:</label>
+                            <label class="col-sm-7 control-label">Fecha de Nacimiento del Hijo con discapacidad:</label>
                             <div class="col-sm-5">
                                 <p class="form-control-static" th:text="${#calendars.format(hijodiscapacidad.fechanamimientohijosdiscapacidad, 'dd/MM/yyyy')}">DUI</p>
                             </div>
