--- a/src/main/resources/templates/fragments/usuario/usuarioformedit.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioformedit.html
@@ -132,7 +132,7 @@
 
 function SwalOverlayColor(){
   setTimeout(function(){
-    $(".swal-overlay").css({"background-image": 'url(/sisadmrh/image/background.jpg)'});
+    $(".swal-overlay").css({"background-image": 'url(/sisadmrh/image/background3.jpg)'});
   },1);
 }
 
@@ -156,7 +156,7 @@ function SwalOverlayColor(){
                 $("form#usuarioform").submit();
             }
             else{
-            SwalOverlayColor();    
+//            SwalOverlayColor();    
             swal({
                 title: "ERROR!",
                 text: "la contraseña debe tener al menos 8 caracteres",
