--- a/src/main/resources/templates/fragments/empleado/empleadoform.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoform.html
@@ -143,8 +143,8 @@
             </div>
                  <div class="form-group">
                 <label class="col-sm-3 control-label">Nacionalidad del Empleado(*):</label>
-                <div class="col-sm-4">
-                    <select class="form-control" name="nacionalidad" >
+                <div class="col-sm-5">
+                    <select class="form-control" name="nacionalidad" th:field="*{nacionalidad}">
                         <!--th:field="*{nacionalidad}">-->
                         <option value="0">--seleccione la Nacionalidad del Empleado--</option>
                         <option value="Salvadoreño">Salvadoreño</option>
@@ -162,9 +162,10 @@
                 <label class="col-sm-3 control-label">Departamentasdo de Nacimiento del Empleado(*):</label>
                 <div class="col-sm-4">
                     <select id="dep1" class="form-control" name="departamentonacimiento" th:field="*{departamentonacimiento}" onchange="searchmunicipio(this,'1');" >
-                    <option th:value="${departamentonacimiento}" th:text="${departamentonacimiento==null}?'--seleccione un departamento--':${departamentonacimiento}"></option>-->
+                    <option th:value="${departamentonacimiento}" th:text="${departamentonacimiento==null}?'--seleccione un departamento--':${departamentonacimiento}"></option>
                     <option th:each="d:${departamentos}" th:value="${d.codigoestado}" th:text="${d.nombreestado}"></option>
                     </select>
+                    
                 </div>
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup6')" onmouseout ="javascript:ocultarAyuda('poppup6')">a</a></b>
@@ -175,8 +176,8 @@
                 <div class="form-group">
                 <label class="col-sm-3 control-label">Municipio de Nacimiento del Empleado(*):</label>
                 <div class="col-sm-4" id ="refresh-after-municipio">
-                    <select id="mun1" class="form-control" name="municipionacimiento" th:field="*{municipionacimiento}">
-                        <option th:value="${municipionacimiento}" th:text="${municipionacimiento==null}?'--seleccione un municipio--':${municipionacimiento}"></option>-->
+                    <select style="width:255px;" id="mun1" class="form-control" name="municipionacimiento" th:field="*{municipionacimiento}">
+                        <option th:value="${municipionacimiento}" th:text="${municipionacimiento==null}?'--seleccione un municipio--':${municipionacimiento}"></option>
                     <option th:each="e:${municipios}" th:value="${e.codigoestado}" th:text="${e.nombreestado}"></option>
                     </select>
                 </div>
@@ -189,7 +190,7 @@
             </div>
                 <div class="form-group">
                 <label class="col-sm-3 control-label">Estado Familiar del Empleado(*):</label>
-                <div class="col-sm-2">
+                <div class="col-sm-5">
                     <select class="form-control" name="estadofamiliar" th:field="*{estadofamiliar}">
                             <!--th:field="*{estadofamiliar}">-->
                               <option value="0">--seleccione el estado familiar del Empleado--</option>
@@ -206,8 +207,8 @@
             </div>
                 <div class="form-group">
                 <label class="col-sm-3 control-label">Sexo del Empleado(*):</label>
-                <div class="col-sm-2">
-                    <select class="form-control" name="sexoempleado" >
+                <div class="col-sm-5">
+                    <select class="form-control" name="sexoempleado" th:field="*{sexoempleado}">
                             <!--th:field="*{sexoempleado}">-->
                               <option value="0">--seleccione el sexo del Empleado--</option>
                         <option value="Femenino">Femenino</option>
@@ -267,17 +268,12 @@
 <!--            </div>
             <div class="col-md-6">  -->
                 
-                  <div class="form-group">
+<!--                  <div class="form-group">
                 <label class="col-sm-3 control-label">Departamento de Residencia del Empleado(*):</label>
                 <div class="col-sm-5">
-<!--                    <select class="form-control" name="departamentorecidencia" >
-                            th:field="*{departamentorecidencia}">
-                        <option>Santa Ana</option>
-                        <option>San Salvador</option>
-                         <option>San Miguel</option>
-                    </select>-->
+
                      <select class="form-control" name="departamentorecidencia" th:field="*{departamentorecidencia}" onchange="searchmunicipio(this,'2');" >
-                    <option th:value="${departamentorecidencia}" th:text="${departamentorecidencia==null}?'--seleccione un departamento--':${departamentorecidencia}"></option>-->
+                    <option th:value="${departamentorecidencia}" th:text="${departamentorecidencia==null}?'--seleccione un departamento--':${departamentorecidencia}"></option>
                     <option th:each="f:${departamentosres}" th:value="${f.codigoestado}" th:text="${f.nombreestado}"></option>
                     </select>
                 </div>
@@ -290,15 +286,10 @@
                 <div class="form-group">
                 <label class="col-sm-3 control-label">Municipio de Residencia del Empleado(*):</label>
                 <div class="col-sm-5" >
-<!--                    <select class="form-control" name="municipioresidencia" >
-                            th:field="*{municipioresidencia}" >
-                        <option>Santa Tecla</option>
-                        <option>antiguo Cuscatlan</option>
-                         <option>Mejicanos</option>
-                    </select>-->
+
                     
                       <select class="form-control" name="municipioresidencia" th:field="*{municipioresidencia}">
-                        <option th:value="${municipioresidencia}" th:text="${municipioresidencia==null}?'--seleccione un municipio--':${municipioresidencia}"></option>-->
+                        <option th:value="${municipioresidencia}" th:text="${municipioresidencia==null}?'--seleccione un municipio--':${municipioresidencia}"></option>
                     <option th:each="g:${municipiores}" th:value="${g.codigoestado}" th:text="${g.nombreestado}"></option>
                     </select>
                 </div>
@@ -307,7 +298,7 @@
                         
                         <span class="popuptext" id="poppup15">Seleccione el municipio de residencia del Empleado desplegando la lista.!</span>
                     </div>
-            </div>
+            </div>-->
                 
                   <div class="form-group">
                     <label class="col-sm-3 control-label">DUI del Empleado(*):</label>
@@ -381,7 +372,7 @@
                 
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Grupo Sanguineo del Empleado(*):</label>
-                    <div class="col-sm-2">
+                    <div class="col-sm-5">
                         <!--<input type="text" class="form-control"    th:field="*{gruposanquineo}" />-->
                           <select class="form-control" name="gruposanquineo" th:field="*{gruposanquineo}" >
                             <!--th:field="*{departamentorecidencia}">-->
@@ -400,7 +391,7 @@
                 </div>
                  <div class="form-group">
                 <label class="col-sm-3 control-label">Tipo de Pension del Empleado(*):</label>
-                <div class="col-sm-2">
+                <div class="col-sm-5">
                     <select class="form-control" name="afiliacionpension"  th:field="*{afiliacionpension}">
                             <!--th:field="*{afiliacionpension}" >-->
                              <option value="0">--seleccione tipo de pension del Empleado--</option>
@@ -438,7 +429,7 @@
                 </div>
                 <div class="form-group">
                 <label class="col-sm-3 control-label">Tipo de Cuenta Bancaria del Empleado(*):</label>
-                <div class="col-sm-2">
+                <div class="col-sm-5">
                     <select class="form-control" name="tipocuenta" th:field="*{tipocuenta}">
                             <!--th:field="*{tipocuenta}">-->
                              <option value="0">--seleccione el tipo de cuenta Bancaria del Empleado--</option>
@@ -466,7 +457,7 @@
                 </div>
  <div class="form-group">
                 <label class="col-sm-3 control-label">Estado del Empleado(*):</label>
-                <div class="col-sm-2">
+                <div class="col-sm-6">
                     <select class="form-control" name="estadoempleado" th:field="*{estadoempleado}">
                             <!--th:field="*{tipocuenta}">-->
                              <option value="7">--seleccione el estado del Empleado--</option>
@@ -679,7 +670,11 @@
 <script>
     var URLactual = window.location.href;
     if (URLactual.includes("edit")){
-//                    alert("str");
+        var txtVal = document.getElementById('dep1').value;
+        var idemp =(jQuery('#codem').val()=="")?0:jQuery('#codem').val();
+        doLoad(null, './../municipio/' + txtVal + '/' + idemp , 'refresh-after-municipio', null);
+        document.getElementById('mun1').style.width="120px";
+                   
 //                    document.getElementById('btngestionar').style.display = 'block';
 //                    document.getElementById('divpop').style.display = 'block';
                     
