--- a/src/main/resources/templates/fragments/empleado/empleadoshow.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoshow.html
@@ -107,21 +107,21 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                                 <p class="form-control-static" th:text="${empleado.emailempleado}">Fecha de Nacimiento</p>
                             </div>
                         </div>
-                         <div class="form-group">
+<!--                         <div class="form-group">
                             <label class="col-sm-5 control-label">Departamento de Residencia del Empleado:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${empleado.departamentorecidencia}">Fecha de Nacimiento</p>
                             </div>
-                        </div>
+                        </div>-->
                          
                     </div> 
                     <div class="col-md-6">
-                        <div class="form-group">
+<!--                        <div class="form-group">
                             <label class="col-sm-7 control-label">Municipio de Residencia del Empleado:</label>
                             <div class="col-sm-5">
                                 <p class="form-control-static" th:text="${empleado.municipioresidencia}">Fecha de Nacimiento</p>
                             </div>
-                        </div>
+                        </div>-->
                         <div class="form-group">
                             <label class="col-sm-7 control-label">DUI del Empleado:</label>
                             <div class="col-sm-5">
@@ -758,7 +758,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<thead>
 															<tr >
 															<th>Codigo</th>
-															<th>Nombre</th>
+															<th>Nombre de Idioma</th>
 															<th>Escribe</th>
 															<th>Habla</th>
 															<th>Traduce</th>
